tests/paczka1/fuzzy1/14472918.err
Error in line 13: DjcdBMq0 A814 91,74
Error in line 1: BYxisQXO A178 13,2
Error in line 19: BYxisQXO A814 40,5
Error in line 5: DjcdBMq0 A178 4,9
